force-app/main/default/objects/b3p__Google_Service_Auth__mdt/b3p__Google_Service_Auth__mdt.object-meta.xml
<CustomObject>
    <label>Google Service Auth</label>
    <pluralLabel>Google Service Auths</pluralLabel>
</CustomObject>