force-app/main/default/objects/b3p__Google_Service_Auth__mdt/fields/b3p__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>b3p__Endpoint__c</fullName>
    <defaultValue>&quot;https://fcm.googleapis.com/v1/projects/b-portals/messages:send&quot;</defaultValue>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>