force-app/main/default/objects/b3p__Google_Service_Auth__mdt/fields/b3p__Project__c.field-meta.xml
<CustomField>
    <fullName>b3p__Project__c</fullName>
    <defaultValue>&quot;b-portals&quot;</defaultValue>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>