force-app/main/default/objects/b3p__Google_Service_Auth__mdt/fields/b3p__Scopes__c.field-meta.xml
<CustomField>
    <fullName>b3p__Scopes__c</fullName>
    <defaultValue>&quot;https://www.googleapis.com/auth/firebase.messaging&quot;</defaultValue>
    <label>Scopes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>