force-app/main/default/objects/b3p__Google_Service_Auth__mdt/fields/b3p__Token_URI__c.field-meta.xml
<CustomField>
    <fullName>b3p__Token_URI__c</fullName>
    <defaultValue>&quot;https://oauth2.googleapis.com/token&quot;</defaultValue>
    <label>Token URI</label>
    <type>Url</type>
</CustomField>